--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.navigationbar">
 
+    <uses-permission android:name="android.permission.INTERNET" ></uses-permission>
+
+
     <application
+        android:name=".AuthenticationActivities.WebSocketService"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NavigationBar">
-        <activity android:name=".TeamActivity" />
-        <activity android:name=".ForgotPasswordActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".AuthenticationActivities.GettingStartedActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".TeamActivity" />
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".AuthenticationActivities.LoginActivity"></activity>
+        <activity android:name=".AuthenticationActivities.RegisterActivity" />
 
-        <activity android:name=".LoginActivity">
-
-        </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
