--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
 }
-
+apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -46,4 +46,5 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
     implementation 'org.greenrobot:eventbus:3.2.0'
+    implementation 'org.greenrobot:greendao:3.3.0'
 }
