--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.navigationbar">
 
-    <uses-permission android:name="android.permission.INTERNET" ></uses-permission>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".AuthenticationActivities.WebSocketService"
@@ -13,15 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NavigationBar">
+        <activity android:name=".AuthenticationActivities.UserValidationActivity"></activity>
         <activity android:name=".AuthenticationActivities.GettingStartedActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".TeamActivity" />
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".AuthenticationActivities.LoginActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".AuthenticationActivities.LoginActivity" />
         <activity android:name=".AuthenticationActivities.RegisterActivity" />
 
         <meta-data
