--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
 }
+apply plugin: 'org.greenrobot.greendao'
+
 
 android {
     compileSdkVersion 30
@@ -40,4 +42,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.android.material:material:1.1.0'
+
+    implementation ('io.socket:socket.io-client:2.0.1') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
+    implementation 'org.greenrobot:eventbus:3.2.0'
+    implementation 'org.greenrobot:greendao:3.3.0'
 }
