--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NavigationBar">
-        <activity android:name=".TeamActivity" />
+        <activity android:name=".RoomActivity" />
         <activity android:name=".MainActivity" android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".AuthenticationActivities.UserValidationActivity"></activity>
         <activity android:name=".AuthenticationActivities.GettingStartedActivity">
