added themes in themes.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NavigationBar">
+        android:theme="@style/Theme.Connect">
         <activity android:name=".RoomActivity" />
         <activity android:name=".MainActivity" android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".AuthenticationActivities.UserValidationActivity"></activity>
-        <activity android:name=".AuthenticationActivities.GettingStartedActivity">
+        <activity android:name=".AuthenticationActivities.UserValidationActivity" android:theme="@style/Theme.Authentication"></activity>
+        <activity android:name=".AuthenticationActivities.GettingStartedActivity" android:theme="@style/Theme.Authentication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AuthenticationActivities.LoginActivity" />
-        <activity android:name=".AuthenticationActivities.RegisterActivity" />
+        <activity android:name=".AuthenticationActivities.LoginActivity" android:theme="@style/Theme.Authentication" />
+        <activity android:name=".AuthenticationActivities.RegisterActivity" android:theme="@style/Theme.Authentication"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
