--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Connect">
-        <activity android:name=".RoomActivity"
-            android:theme="@style/Theme.Connect.NoActionBar"/>
+        <activity android:name=".RoomActivity" />
         <activity android:name=".MainActivity" android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".AuthenticationActivities.UserValidationActivity" android:theme="@style/Theme.Authentication"></activity>
         <activity android:name=".AuthenticationActivities.GettingStartedActivity" android:theme="@style/Theme.Authentication">
