--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:name=".AuthenticationActivities.WebSocketService"
         android:allowBackup="true"
@@ -13,17 +12,32 @@
         android:roundIcon="@mipmap/app_icon_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Connect">
-        <activity android:name=".RoomActivity" android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".MainActivity" android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".AuthenticationActivities.UserValidationActivity" android:theme="@style/Theme.Authentication"></activity>
-        <activity android:name=".AuthenticationActivities.GettingStartedActivity" android:theme="@style/Theme.Authentication">
+        <activity android:name=".MeetActivity"></activity>
+        <activity
+            android:name=".RoomActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".AuthenticationActivities.UserValidationActivity"
+            android:theme="@style/Theme.Authentication" />
+        <activity
+            android:name=".AuthenticationActivities.GettingStartedActivity"
+            android:theme="@style/Theme.Authentication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AuthenticationActivities.LoginActivity" android:theme="@style/Theme.Authentication" />
-        <activity android:name=".AuthenticationActivities.RegisterActivity" android:theme="@style/Theme.Authentication"/>
+        <activity
+            android:name=".AuthenticationActivities.LoginActivity"
+            android:theme="@style/Theme.Authentication" />
+        <activity
+            android:name=".AuthenticationActivities.RegisterActivity"
+            android:theme="@style/Theme.Authentication" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
