resolved most bugs and have to fix the members part

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/app_icon_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Connect">
-        <activity android:name=".MeetActivity"></activity>
+        <activity android:name=".MeetActivity" />
         <activity
             android:name=".RoomActivity"
             android:windowSoftInputMode="adjustPan" />
