--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     }
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'org.greenrobot:greendao:3.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
