--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         <activity
             android:name=".AuthenticationActivities.RegisterActivity"
             android:theme="@style/Theme.Authentication" />
+        <activity android:name=".chat.ActivityMainMessage"
+            android:theme="@style/Theme.Connect"/>
 
         <meta-data
             android:name="preloaded_fonts"
